...
    floatingActionButton: @Composable () -> Unit = {},
    content: @Composable (ColumnScope.() -> Unit)
) {
  Scaffold(
      floatingActionButton = { floatingActionButton() },
      topBar = {
        TopBar(
            buttons = topBarButtons,
            helpText = helpText,
        )
      },
      bottomBar = { BottomBar(navigationActions, topLevelDestination) },
      content = { padding -> ScreenColumn(padding, testTag, content) })
...
@VisibleForTesting(otherwise = VisibleForTesting.PRIVATE)
fun BackButton(navigationActions: NavigationActions) {
  BasicButton(
      onClick = { navigationActions.goBack() },
      iconTestTag = "BackIcon",
      contentDescription = "Back",
      modifier = Modifier.testTag("BackButton"),
      icon = Icons.AutoMirrored.Filled.ArrowBack,
  )
}

@Composable
@VisibleForTesting(otherwise = VisibleForTesting.PRIVATE)
...
