...
  val coroutineScope = rememberCoroutineScope()
  val letterText = stringResource(id = R.string.letter_text)

  val topBarButtons =
      listOf<@Composable () -> Unit>(
          {
            FeedbackButton(
                navigationActions,
                Modifier.onGloballyPositioned { coords ->
                  saveElementPosition("FeedbackButton", coords, density, elementPositions)
                })
          },
          {
            QuizButton(
                navigationActions,
                Modifier.onGloballyPositioned { coords ->
                  saveElementPosition("QuizButton", coords, density, elementPositions)
                })
          },
          {
            QuestsButton(
                navigationActions,
                Modifier.onGloballyPositioned { coords ->
                  saveElementPosition("QuestsButton", coords, density, elementPositions)
                })
          })
  var numOfHeaders = 0
  // Define other headers dynamically
  val additionalHeaders =
      listOf<@Composable () -> Unit>(
          { Spacer(modifier = Modifier.height(32.dp)) },
          {
            CameraFeedbackButton(
                onClick = { navigationActions.navigateTo(Screen.PRACTICE) },
                modifier =
                    Modifier.onGloballyPositioned { coords ->
                      saveElementPosition("CameraFeedbackButton", coords, density, elementPositions)
                    })
          },
          {
            LetterDictionary(
                coroutineScope = coroutineScope,
                numbOfHeaders = numOfHeaders, // Dynamically computed later
                clickable = true,
                onClick = { page, numbOfHeaders ->
                  coroutineScope.launch { scrollState.scrollToItem(page + numbOfHeaders) }
                },
...
  // Calculate headers dynamically
  numOfHeaders = calculateNumOfHeadersOfTopBarButtons(topBarButtons, additionalHeaders)

  MainScreenScaffold(
      navigationActions = navigationActions,
      topLevelDestination = TopLevelDestinations.HOME,
      testTag = "HomeScreen",
      helpText =
          HelpText(
              title = stringResource(R.string.home_text),
              content = stringResource(R.string.help_home_screen_text)),
      topBarButtons = topBarButtons,
      floatingActionButton = {
        FloatingActionButton(
            onClick = { coroutineScope.launch { scrollState.animateScrollToItem(0) } },
            containerColor = MaterialTheme.colorScheme.primary,
            contentColor = MaterialTheme.colorScheme.onPrimary,
            modifier = Modifier.testTag("ScrollToTopButton")) {
              Icon(Icons.Default.KeyboardArrowUp, contentDescription = "Scroll to Top")
            }
      },
      content = {
        LazyColumn(state = scrollState, modifier = Modifier.weight(1f)) {
          additionalHeaders.forEach { composable -> item { composable() } }
...
  val pagerState = rememberPagerState(initialPage = 0, pageCount = { exercises.size })

  Column(horizontalAlignment = Alignment.CenterHorizontally, modifier = modifier.fillMaxWidth()) {
    HorizontalPager(
        beyondViewportPageCount = exercises.size,
        state = pagerState,
        modifier = Modifier.height(160.dp).padding(8.dp).testTag("ExerciseListPager"),
        verticalAlignment = Alignment.CenterVertically) { page ->
          Box(
              contentAlignment = Alignment.Center,
              modifier = Modifier.fillMaxSize().padding(16.dp)) {
                Box(
                    modifier =
...
