...
        onClick = {
          coroutineScope.launch {
            pagerState.animateScrollToPage(
                (pagerState.currentPage - 1 + letters.size) % letters.size)
          }
        },
        modifier = Modifier.align(Alignment.CenterStart).testTag("LetterDictionaryBack")) {
          Icon(
              Icons.AutoMirrored.Outlined.ArrowBack,
              tint = MaterialTheme.colorScheme.primary,
              contentDescription = "Back")
        }

...
    IconButton(
        onClick = {
          coroutineScope.launch {
            pagerState.animateScrollToPage((pagerState.currentPage + 1) % letters.size)
          }
        },
        modifier = Modifier.align(Alignment.CenterEnd).testTag("LetterDictionaryForward")) {
          Icon(
              Icons.AutoMirrored.Outlined.ArrowForward,
              tint = MaterialTheme.colorScheme.primary,
              contentDescription = "Forward")
        }
  }
...
